# ThinkRoom

./: .env  README.md  docker-compose.yml
backend/: .env  pyproject.toml
backend/app/: main.py
backend/core/: auth.py  config.py  connection_manager.py  email.py  security.py
backend/db/: database.py
backend/migrations/: env.py
backend/migrations/versions/: 0d52176f2660_create_messages_table.py  21acd358bbe6_add_materials_table.py  34116bc38f0b_create_session_members_table.py  6eca66afc5ac_remove_last_active_at_from_sessions.py  868548436463_create_sessions_table.py  a18f23417343_create_session_members_table.py  b2a0e72dd22b_add_last_active_at_to_sessions.py  bd006cf19336_add_session_sketch_table.py  c2d78dfc8e68_create_messages_table.py  f2f05dafa18c_add_session_editor_table.py  f4ae9d5c06d0_create_users_table.py
backend/models/: material.py  message.py  session.py  session_editor.py  session_member.py  session_sketch.py  user.py
backend/routers/: auth.py  editor.py  material.py  message.py  session.py  webrtc.py  websocket.py
backend/schemas/: material.py  message.py  session.py  user.py
frontend/: .env  package-lock.json  package.json
frontend/src/: App.jsx  main.jsx
frontend/src/pages/auth/: ForgotPasswordPage.jsx  LoginPage.jsx  RegisterPage.jsx
frontend/src/pages/dashboard/: DashboardPage.jsx
frontend/src/pages/session/: SessionPage.jsx
frontend/src/shared/components/: Alert.jsx  AuthRedirect.jsx  Avatar.jsx  Button.jsx  Loader.jsx  (+2 more)
frontend/src/styles/: auth.module.css  dashboard.module.css  session.module.css  shared.module.css
(+56 files in other folders)
